--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,7 @@ body {
     color: black;
   }
   
-  .container {
+  /* .container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -147,4 +147,4 @@ body {
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
   }
   
-  
+   */
