--- a/src/styles/VideoUpload.css
+++ b/src/styles/VideoUpload.css
@@ -56,7 +56,7 @@ button:hover {
 
 .event-strings-box {
   background-color: #f0f0f0; /* Different background color */
-  max-height: 700px; /* Maximum height */
+  max-height: 600px; /* Maximum height */
   overflow-y: auto; /* Enable vertical scrolling */
   padding: 10px; /* Add padding for spacing */
   margin-top: 20px; /* Add margin to separate from other content */
@@ -65,3 +65,19 @@ button:hover {
 .event-strings-content {
   /* No specific styles needed here, inherits from event-strings-box */
 }
+
+.progress-bar {
+  width: 100%;
+  height: 20px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  background-color: blue;
+  border-radius: 10px;
+  transition: width 0.3s ease-in-out;
+}
+
