Added code for fetching logs

--- a/src/styles/VideoUpload.css
+++ b/src/styles/VideoUpload.css
@@ -22,7 +22,7 @@ button {
   font-size: 16px;
   border: none;
   border-radius: 8px;
-  background-color: #4CAF50;
+  background-color: #009B77;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s;
@@ -30,41 +30,43 @@ button {
 
 .choose-file-button:hover,
 button:hover {
-  background-color: #45a049;
+  background-color: #33b249;
 }
 
 .upload-message p {
   display: block; /* Ensure each message appears on its own line */
 }
 
-.event-strings-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: #f0f0f0;
-  padding: 10px;
-  font-weight: bold;
-}
-
 .event-strings-box {
-  background-color: #f0f0f0;
-  max-height: calc(100vh - 50px); /* Adjust as necessary */
-  overflow-y: auto;
-  padding: 10px;
-  margin-top: 50px; /* Adjust to accommodate the fixed header */
-}
-
-.event-strings-box {
-  background-color: #f0f0f0; /* Different background color */
-  max-height: 600px; /* Maximum height */
-  overflow-y: auto; /* Enable vertical scrolling */
-  padding: 10px; /* Add padding for spacing */
-  margin-top: 20px; /* Add margin to separate from other content */
+  background-color: #8076a3;   
+  border-radius: 12px;          /* Rounded corners */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);  /* Soft shadow */
+  max-height: 600px;           /* Maximum height */
+  overflow-y: auto;            /* Enable vertical scrolling */
+  padding: 20px;               /* Add padding for spacing */
+  margin-top: 20px;            /* Add margin to separate from other content */
+  font-family: 'Arial', sans-serif; /* Set font family */
 }
 
 .event-strings-content {
   /* No specific styles needed here, inherits from event-strings-box */
 }
+
+/* Style for scroll bar */
+.event-strings-box::-webkit-scrollbar {
+  width: 10px;
+}
+
+.event-strings-box::-webkit-scrollbar-thumb {
+  background-color: #9B2335;   /* Scroll bar thumb color */
+  border-radius: 6px;
+}
+
+.event-strings-box::-webkit-scrollbar-track {
+  background-color: #f4f4f4;   /* Scroll bar track color */
+  border-radius: 6px;
+}
+
 
 .progress-bar {
   width: 100%;
@@ -76,7 +78,7 @@ button:hover {
 
 .progress-bar-fill {
   height: 100%;
-  background-color: blue;
+  background-color: #12343b;
   border-radius: 10px;
   transition: width 0.3s ease-in-out;
 }
